[FEAT] 검색 결과 아이템에 등록