@@ -11,13 +11,13 @@ public enum CType {
 
     @JsonCreator
     public static CType fromValue(String value) {
-        if (value == null || value.trim().isEmpty()) {
-            throw new IllegalArgumentException("CType value cannot be null or empty");
+        if (value == null || value.isBlank()) {
+            throw new IllegalArgumentException("Invalid CType value: " + value);
         }
         try {
             return CType.valueOf(value.trim().toUpperCase());
         } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid CType value: " + value);
+            throw new IllegalArgumentException("Invalid CType value: " + value, e);
         }
     }
 
@@ -26,6 +26,16 @@ public enum CType {
         return name().toLowerCase(); // 반환 시 소문자로 반환
     }
 
+    public static CType fromString(String value) {
+        if (value == null) {
+            throw new IllegalArgumentException("CType value cannot be null");
+        }
+        try {
+            return CType.valueOf(value.trim().toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Invalid CType value: " + value, e);
+        }
+    }
 
 
 }
